--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@testing-library/user-event": "^13.5.0",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
+    "import": "^0.0.6",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
